Project rag_system {
  database_type: 'PostgreSQL'
  Note: '''
  PostgreSQL хранит состояние системы: проекты, документы, чанки, очередь фоновых задач
  и результаты анализа противоречий. Qdrant хранит векторы, а файловое/S3-хранилище —
  оригиналы загруженных документов.
  '''
}

Table documents.projects {
  id bigserial [pk]
  name text [unique, not null]
  description text [not null, default: ""]
  state text [not null, default: "active", note: "active | reindexing | deleting"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table documents.project_index_configs {
  id bigserial [pk]
  project_id bigint [not null, ref: > documents.projects.id]
  version integer [not null]
  is_active boolean [not null, default: false]
  embedding_model_name text [not null]
  embedding_dimension integer [not null]
  parser_name text [not null, default: "docling"]
  parser_version text
  chunking_strategy text [not null, default: "recursive"]
  chunk_size integer [not null, default: 1200, note: "Target chunk size. Sentence-boundary selection may exceed this within a bounded window."]
  chunk_overlap integer [not null, default: 200, note: "Target overlap between adjacent chunks. Starts are moved to nearby sentence boundaries when possible."]
  chunk_unit text [not null, default: "characters", note: "Current chunking unit."]
  tokenizer_name text
  rag_dense_weight real [not null, default: 0.7, note: "Dense branch weight for RAG retrieval. Values above 0 participate in Qdrant weighted RRF fusion."]
  rag_sparse_weight real [not null, default: 0.3, note: "Sparse branch weight for RAG retrieval. Values above 0 participate in Qdrant weighted RRF fusion."]
  rag_top_k integer
  rag_context_top_n integer
  query_rewrite_enabled boolean
  contradiction_dense_weight real [not null, default: 0.5, note: "Dense branch weight for contradiction retrieval. Values above 0 participate in Qdrant weighted RRF fusion."]
  contradiction_sparse_weight real [not null, default: 0.5, note: "Sparse branch weight for contradiction retrieval. Values above 0 participate in Qdrant weighted RRF fusion."]
  contradiction_top_k integer
  contradiction_max_distance real
  created_at timestamptz [not null, default: `now()`]
  activated_at timestamptz

  Indexes {
    (project_id, version) [unique]
    project_id
  }

  Note: "Индекс idx_project_index_configs_one_active_per_project гарантирует одну активную конфигурацию на проект."
}

Table documents.documents {
  id bigserial [pk]
  project_id bigint [not null, ref: > documents.projects.id]
  name text [not null]
  storage_key text [not null, note: "Ключ оригинального файла в local/S3 storage."]
  size_bytes bigint [not null]
  mime_type text [not null]
  sha256 text [not null]
  status text [not null, default: "uploaded", note: "uploaded | processing | indexed | failed"]
  indexed_config_id bigint [ref: > documents.project_index_configs.id]
  summary text [not null, default: ""]
  failure_reason text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (project_id, status)
    project_id
  }
}

Table documents.chunks {
  id bigserial [pk]
  document_id bigint [not null, ref: > documents.documents.id]
  project_id bigint [not null, ref: > documents.projects.id]
  index_config_id bigint [not null, ref: > documents.project_index_configs.id]
  qdrant_point_id uuid [not null, note: "UUID точки в Qdrant."]
  chunk_order integer [not null]
  text text [not null]
  char_start integer [not null]
  char_end integer [not null]
  token_count integer
  page_number integer
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (document_id, chunk_order) [unique]
    project_id
    document_id
  }
}

Table documents.document_processing_jobs {
  id bigserial [pk]
  project_id bigint [not null, ref: > documents.projects.id]
  document_id bigint [ref: > documents.documents.id]
  kind text [not null, note: "ingest | reindex"]
  status text [not null, default: "queued", note: "queued | processing | completed | failed"]
  target_index_config_id bigint [not null, ref: > documents.project_index_configs.id]
  attempt_count integer [not null, default: 0]
  last_error text
  claimed_by text
  claimed_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  completed_at timestamptz

  Indexes {
    status
  }
}

Table documents.document_history {
  id bigserial [pk]
  document_id bigint [not null, ref: > documents.documents.id]
  operation text [not null]
  details json
  created_at timestamptz [not null, default: `now()`]
}

Table analysis.analysis_jobs {
  id bigserial [pk]
  project_id bigint [not null, ref: > documents.projects.id]
  base_document_id bigint [not null, ref: > documents.documents.id]
  status text [not null, default: "queued", note: "queued | processing | completed | failed"]
  warning_message text
  error_message text
  results json [note: "Массив результатов проверки противоречий."]
  attempt_count integer [not null, default: 0]
  claimed_by text
  claimed_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  completed_at timestamptz

  Indexes {
    (project_id, status)
  }
}

Table analysis.analysis_job_targets {
  job_id bigint [not null, ref: > analysis.analysis_jobs.id]
  document_id bigint [not null, ref: > documents.documents.id]

  Indexes {
    (job_id, document_id) [pk]
  }
}

Table public.alembic_version {
  version_num varchar(32) [pk, not null, note: "Alembic migration version marker."]
}
